--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/tailwind": "^2.1.1",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@vercel/analytics": "^0.1.3",
     "astro": "^1.5.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
